[gd_scene load_steps=2 format=3 uid="uid://bqxvhqxqxqxqx"]

[ext_resource type="Script" path="res://addons/rive_runtime_loader/rive_runtime_panel.gd" id="1"]

[node name="RiveRuntimePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Rive Runtime Loader"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="FileSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="FileSectionLabel" type="Label" parent="VBox/FileSection"]
layout_mode = 2
text = "文件加载"

[node name="HBox" type="HBoxContainer" parent="VBox/FileSection"]
layout_mode = 2

[node name="FilePathLineEdit" type="LineEdit" parent="VBox/FileSection/HBox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "选择.riv文件路径"

[node name="BrowseButton" type="Button" parent="VBox/FileSection/HBox"]
layout_mode = 2
text = "浏览"

[node name="LoadButton" type="Button" parent="VBox/FileSection"]
layout_mode = 2
text = "加载文件"

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ViewerSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ViewerSectionLabel" type="Label" parent="VBox/ViewerSection"]
layout_mode = 2
text = "RiveViewer选择"

[node name="HBox" type="HBoxContainer" parent="VBox/ViewerSection"]
layout_mode = 2

[node name="RiveViewerOption" type="OptionButton" parent="VBox/ViewerSection/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefreshButton" type="Button" parent="VBox/ViewerSection/HBox"]
layout_mode = 2
text = "刷新"

[node name="HSeparator3" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="InfoSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="InfoSectionLabel" type="Label" parent="VBox/InfoSection"]
layout_mode = 2
text = "文件信息"

[node name="FileInfoLabel" type="Label" parent="VBox/InfoSection"]
layout_mode = 2
text = "未加载文件"
autowrap_mode = 2

[node name="HSeparator4" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ControlSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ControlSectionLabel" type="Label" parent="VBox/ControlSection"]
layout_mode = 2
text = "播放控制"

[node name="SceneHBox" type="HBoxContainer" parent="VBox/ControlSection"]
layout_mode = 2

[node name="SceneLabel" type="Label" parent="VBox/ControlSection/SceneHBox"]
layout_mode = 2
text = "场景:"
custom_minimum_size = Vector2(50, 0)

[node name="SceneOption" type="OptionButton" parent="VBox/ControlSection/SceneHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AnimationHBox" type="HBoxContainer" parent="VBox/ControlSection"]
layout_mode = 2

[node name="AnimationLabel" type="Label" parent="VBox/ControlSection/AnimationHBox"]
layout_mode = 2
text = "动画:"
custom_minimum_size = Vector2(50, 0)

[node name="AnimationOption" type="OptionButton" parent="VBox/ControlSection/AnimationHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayPauseButton" type="Button" parent="VBox/ControlSection"]
layout_mode = 2
text = "暂停"

[node name="HSeparator5" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="InputsSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="InputsSectionLabel" type="Label" parent="VBox/InputsSection"]
layout_mode = 2
text = "输入参数"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/InputsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="InputsContainer" type="VBoxContainer" parent="VBox/InputsSection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
